@startuml

skinparam classAttributeIconSize 0
'skinparam linetype polyline

abstract class Circuit {
# name : String
+ {abstract} process()
}

class Component {
+ process()
}

class And {
+ process()
}

class Or {
+ process()
}

class Not {
+ process()
}

Circuit <|-down- And
Circuit <|-down- Or
Circuit <|-down- Not
Circuit <|-down- Component

' put Component to the right of And, Or, Not
Or -right[hidden]-> Component
Not -right[hidden]-> Component
And -right[hidden]-> Component

Component "1" -left-> "1..*" Circuit : circuits

'note bottom of Component
'	public void process() {
'		for (Circuit circ : circuits) {
'			circ.process();
'		}
'	}
'end note

package java.util {
  abstract class Observable {
  + addObserver(ob : Observer)
  + removeObserver(ob : Observer)
  + setChanged()
  + notifyObservers()
  }

  interface Observer {
  {abstract} update(arg0 : Observable, \n\t      arg1 : Object)
  }
}

Observable -[hidden]right- Observer

class Pin extends Observable implements Observer {
- state : boolean
- name : String
+ update(arg0 : Observable, \n\t\t arg1 : Object)
}

Circuit *-right-> "1..*" Pin : inputs
Circuit *-right-> "1..*" Pin : outputs

class Connection {
- pinFrom : Pin
- pinTo : Pin
+ Connection(pinFrom : Pin, pinTo : Pin)
}

Component *-down-> "*" Connection
Connection *-up-> "2" Pin

class Utis {
+ static boolean[] int2Binary()
+ static int binary2Int()
}




@enduml